create-license/main/default/objects/Product2/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>The application ID on the Replicated Vendor Portal</description>
    <inlineHelpText>Please set the application</inlineHelpText>
    <label>Application</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>