create-license/main/default/objects/Product2/fields/IsAddOn__c.field-meta.xml
<CustomField>
    <fullName>IsAddOn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A product is only available as an add-on product if this field is set.</description>
    <inlineHelpText>Is this product an add-on to another available product?</inlineHelpText>
    <label>Add-On Product</label>
    <type>Checkbox</type>
</CustomField>