create-license/main/default/objects/Product2/fields/IsAdminConsoleEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsAdminConsoleEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer can use the Admin Console to install and manage the application</description>
    <inlineHelpText>Include Admin Console in customer license</inlineHelpText>
    <label>Admin Console</label>
    <type>Checkbox</type>
</CustomField>