create-license/main/default/objects/Product2/fields/IsEmbeddedClusterEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEmbeddedClusterEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer can use a Kubernetes appliance to install the application</description>
    <inlineHelpText>Include virtual appliance install in customer license</inlineHelpText>
    <label>Kubernetes Appliance</label>
    <type>Checkbox</type>
</CustomField>