create-license/main/default/objects/Product2/fields/ReleaseChannel__c.field-meta.xml
<CustomField>
    <fullName>ReleaseChannel__c</fullName>
    <description>The release channel ID on the Replicated Vendor Portal</description>
    <inlineHelpText>Please set the release channel</inlineHelpText>
    <label>Release Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>