create-license/main/default/objects/Product2/validationRules/ValidateIsEmbeddedClusterEnabled.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateIsEmbeddedClusterEnabled</fullName>
    <active>true</active>
    <description>Ensure the airgap entitlement can only be enabled when the Admin Console entitlement is enabled</description>
    <errorConditionFormula>AND( IsEmbeddedClusterEnabled__c  = TRUE, NOT( IsAdminConsoleEnabled__c ))</errorConditionFormula>
    <errorDisplayField>IsEmbeddedClusterEnabled__c</errorDisplayField>
    <errorMessage>Enabling the virtual appliance requires the Admin Console also be enabled</errorMessage>
</ValidationRule>