create-license/main/default/objects/Product2/validationRules/ValidateNoEntitlementsForAddOns.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateNoEntitlementsForAddOns</fullName>
    <active>true</active>
    <errorConditionFormula>IsAddOn__c = TRUE &amp;&amp;
            (
                IsAirgapEnabled__c = TRUE ||
                IsEmbeddedClusterEnabled__c = TRUE ||
                IsAdminConsoleEnabled__c = TRUE ||
                IsSnapshotSupported__c = TRUE ||
                IsSupportBundleUploadEnabled__c = TRUE
            )</errorConditionFormula>
    <errorMessage>Add-on products cannot specify entitlements</errorMessage>
</ValidationRule>